--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:type" content="video.other" />
   <meta property="og:title" content="Watch Your Personalized Campaign Video" />
   <meta property="og:description" content="Click to view your customized video message." />
-  <meta property="og:image" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/abhiyanai/Devandra_Fadanvis/f4ee5777-59e8-419a-8ee5-b43fa0ca26eb/Election_Santosh/Base_Videos/original_santosh_thumbnail_20250725105407.jpg" />
-  <meta property="og:video" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/abhiyanai/Devandra_Fadanvis/f4ee5777-59e8-419a-8ee5-b43fa0ca26eb/Election_Santosh/Base_Videos/original_santosh_20250725105407.mp4" />
+  <meta property="og:image" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/thumbnails/387c5354-da6e-404a-9232-ed235040d208.jpg" />
+  <meta property="og:url" content="https://preview-site-three.vercel.app/index.html" />
+  <meta property="og:video" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/videos/387c5354-da6e-404a-9232-ed235040d208.mp4" />
   <meta property="og:video:type" content="video/mp4" />
   <meta property="og:video:width" content="1280" />
   <meta property="og:video:height" content="720" />
-  <title>Watch Your Personalized Campaign Video</title>
+  <title>Video Preview</title>
 </head>
 <body>
   <h1>Video Preview</h1>
