--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:title" content="Watch Your Personalized Campaign Video" />
   <meta property="og:description" content="Click to view your customized video message." />
   <meta property="og:image" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/thumbnails/387c5354-da6e-404a-9232-ed235040d208.jpg" />
-  <meta property="og:url" content="https://preview-site-three.vercel.app/" />
+  <meta property="og:url" content="http://preview-thumbnail-whatsapp.s3-website.eu-north-1.amazonaws.com/" />
   <meta property="og:video" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/videos/387c5354-da6e-404a-9232-ed235040d208.mp4" />
   <meta property="og:video:type" content="video/mp4" />
   <meta property="og:video:width" content="1280" />
