--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:type" content="video.other" />
-  <meta property="og:title" content="Watch Your Personalized Campaign Video" />
-  <meta property="og:description" content="Click to view your customized video message." />
+  <meta property="og:title" content="Private Video Preview" />
+  <meta property="og:description" content="Watch this secure video preview." />
   <meta property="og:image" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/thumbnails/387c5354-da6e-404a-9232-ed235040d208.jpg" />
-  <meta property="og:url" content="http://preview-thumbnail-whatsapp.s3-website.eu-north-1.amazonaws.com/" />
   <meta property="og:video" content="https://abhiyanai.s3.eu-north-1.amazonaws.com/videos/387c5354-da6e-404a-9232-ed235040d208.mp4" />
   <meta property="og:video:type" content="video/mp4" />
-  <meta property="og:video:width" content="1280" />
-  <meta property="og:video:height" content="720" />
-  <title>Video Preview</title>
+  <meta property="og:video:width" content="640" />
+  <meta property="og:video:height" content="360" />
+
+  <title>Secure Video Preview</title>
 </head>
-<body>
-  <h1>Video Preview</h1>
-  <video width="640" height="360" controls>
+<body style="text-align: center; padding: 40px;">
+  <h2>Secure Video Preview</h2>
+  <video width="640" height="360" controls poster="https://abhiyanai.s3.eu-north-1.amazonaws.com/thumbnails/387c5354-da6e-404a-9232-ed235040d208.jpg">
     <source src="https://abhiyanai.s3.eu-north-1.amazonaws.com/videos/387c5354-da6e-404a-9232-ed235040d208.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
   </video>
 </body>
 </html>
